WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271307
[@starting-style] Contents of popover is not rendered when opened a 2nd time
https://bugs.webkit.org/show_bug.cgi?id=271307
Summary
[@starting-style] Contents of popover is not rendered when opened a 2nd time
Jeroen Zwartepoorte
Reported
2024-03-20 02:47:46 PDT
The codepen in this blog post
https://nerdy.dev/steal-this-popover-starter-kit
(
https://codepen.io/argyleink/pen/JjzqXee
) has a bug on STP 190 where the "tip" contents of the popover is missing when you open the popover for a 2nd time. This is probably related to `@starting-style`, since I can't reproduce this bug in Safari 17.4 and that does not support `@starting-style`.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-20 06:53:01 PDT
<
rdar://problem/125085007
>
Antti Koivisto
Comment 2
2024-03-22 05:02:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26308
EWS
Comment 3
2024-03-22 08:45:40 PDT
Committed
276546@main
(353c94ffa3f7): <
https://commits.webkit.org/276546@main
> Reviewed commits have been landed. Closing PR #26308 and removing active labels.
Antti Koivisto
Comment 4
2024-03-25 04:39:59 PDT
Thanks for filing and for the good test case
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug