[@starting-style] Contents of popover is not rendered when opened a 2nd time https://bugs.webkit.org/show_bug.cgi?id=271307 rdar://125085007

Reviewed by Antoine Quint.

Repeatedly applying @starting-style may fail because we compute the style diff
against wrong style and may conclude that there is no change and fail to
update the subtree. First time round the renderer is marked invalid so we avoid
this problem.

* LayoutTests/fast/animation/starting-style-repeat-expected.html: Added.
* LayoutTests/fast/animation/starting-style-repeat.html: Added.
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::createAnimatedElementUpdate):

Take care to diff with the current style.

Canonical link: https://commits.webkit.org/276546@main